Création du html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <input type="number" name="number" id="number">
+    <button id="valide">Valider</button>
     
     <script src="script.js"></script>
 </body>
