--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <input type="number" name="number" id="number">
     <button id="valide">Valider</button>
+
+    <div id="result"></div>
     
     <script src="script.js"></script>
 </body>
