--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    Ecrire un nombre
+
     <input type="number" name="number" id="number">
     <button id="valide">Valider</button>
 
